Finish logic gates (Details) - Floating inputs are now treated as 0 - Circuits with only floating inputs and chips are now solved - Add logic gate types, wiki and color

--- a/TODO.txt
+++ b/TODO.txt
@@ -826,7 +826,15 @@ SPRK controlled resistor
 large circuits are slow :(
 
 
+chip - fix 1 frame lag
+
 touching GRND doesn't always create a node
+- when the wre is inside the ground
+- because GRND isn't considered part of the skeleton 
+
+
+terminals still dont always uopdare
+- appears to be a problem still :(
 
 
 chips:
